# hpc-uebungen

./: .gitignore  ENVIRONMENT.md  PROJECT.md  README.md
amdahl/: README.md  amdahl-soln.ipynb  pyproject.toml
beispiele/javathreads/: MemoryModel.java  StopThread.java  helloworld.c
beispiele/mem/: align.c
beispiele/openmp/: redux.c  vectoradd.c  vectorsum.c
caches/: CMakeLists.txt  README.md  matrixadd-soln.c  matrixadd.c
cpu-vs-mem/: CMakeLists.txt  README.md  alignment  alignment.c  cpu-vs-mem-soln.c  cpu-vs-mem.c
data-par-sim/: nbody.ipynb  test.py
gameoflife-openmp/: ENVIRONMENT.md  README.md
graustufen/: CMakeLists.txt  README.md  graustufen-loop-soln  graustufen-loop-soln.c  graustufen-loop.c  graustufen-numpy-soln.ipynb  graustufen-numpy.ipynb  graustufenmatrixmul.excalidraw
helloworlds/cuda/: Makefile  hellocuda.c  hellocuda.cu  test.cu
helloworlds/mpi/: Makefile  README.md  hellompi.c  mpisend.c  mpisenddeadlock.c
helloworlds/opencl/: CMakeLists.txt  Makefile  dumpcl.c  helloopencl.c  matmul.py  opencl-program.cl  opencl-skeleton.c  vecadd.py
helloworlds/openmp/: Makefile  helloopenmp.c
java/threading/: NaiveFork.java  Reduction.java  ReductionExec.java  Volatile.java
mpi-collective-comm/: CMakeLists.txt  README.md  mpi-coll-comm-soln.c  mpi-coll-comm.c
mpi-examples/: bcast.c
numerik-floats/: README.md  numerik-floats.ipynb
opencl-benchmark/: CMakeLists.txt  Makefile  benchmark-soln.cl  opencl-benchmark-soln.c
opencl-local-example/: CMakeLists.txt  Makefile  opencl-local-example.c  opencl-local-example.cl
opencl-matmul/: README.md
opencl-matmul/blocked/: CMakeLists.txt  Makefile  matmul-blocked-soln.c  matmul-blocked-soln.cl
opencl-matmul/blocked-cpu/: CMakeLists.txt  Makefile  blocked-soln.c
opencl-matmul/unoptimized/: CMakeLists.txt  Makefile  README.md  matmul-unoptimized-soln.c  matmul-unoptimized-soln.cl  matmul-unoptimized.c  matmul-unoptimized.cl
openmp-heateq-blocking/: CMakeLists.txt  heateq.c
openmp-tiling/: CMakeLists.txt  Loesung.md  README.md  openmp-tiling-soln.c  openmp-tiling.c
parralelwarmup/: README.md
password-crack-openmp/: CMakeLists.txt  Makefile  README.md  password-crack-soln.c  password-crack.c
restrict/: heateq.c  restrict  restrict.c
roofline/: README.md
simd/: CMakeLists.txt  README.md  graustufen-simd-soln.md  matrixadd-simd-soln.c  matrixadd-simd.c
sparse-matrix/: FloatRange.java  README.md  arrays.ipynb  csr-soln.c  csr-soln.ipynb  csr.c
